--- a/BACKEND Devlopment - PART 3/views/index.ejs
+++ b/BACKEND Devlopment - PART 3/views/index.ejs
@@ -7,6 +7,6 @@
 </head>
 <body>
 <h1>Home</h1>
-<h1>Hello <%= name %> </h1> <!-- switching back to javascript code . ALl js code and js expression goes into <%= Here %> -->
+<h1>Hello <%= name %> </h1> <!-- switching back to javascript code . ALl js code and js expression goes into <%= Here %>.locals is a special object here through which we can access dynamic passed in properties such as locals.name here. -->
 </body>
 </html>
